# First_two

./: .gitignore  BASELINE_PLAN.md  BEGINNER_README.md  BitNet_Desktop_Start.bat  NEXT_STEPS_UI_AND_BACKLOG.md  ONLINE_EXECUTION_LOG.md  ONLINE_RESOURCE_COLLECTION.md  README.md  REVIEW_REPORT.md  bitnet_desktop.pyw  deferred_install_manifest.json  offline_install.ps1  offline_install.sh  pyproject.toml
bitnet_tools/: __init__.py  analysis.py  cli.py  compare.py  desktop.py  doctor.py  document_extract.py  explain.py  geo.py  multi_csv.py  offline_bundle.py  planner.py  schema_semantics.py  versioning.py  visualize.py  viz_recommender.py  web.py
bitnet_tools/ui/: app.js  index.html  styles.css
resources/: online_sources.json  schema_semantics_ko.json
scripts/: collect_online_assets.py  prepare_online_bundle.sh
tests/: test_analysis.py  test_cli.py  test_collect_online_assets.py  test_compare.py  test_doctor.py  test_document_extract.py  test_explain.py  test_geo.py  test_offline_bundle.py  test_planner.py  test_schema_semantics.py  test_ui_contract.py  test_viz_recommender.py  test_web.py
tests/fixtures/: missing_heavy.csv  mixed_formats.csv  small_numeric.csv
