[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "bitnet-tools"
version = "0.1.0"
description = "BitNet-first local data analysis helper"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
bitnet-analyze = "bitnet_tools.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
